Correction bug alignement

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -140,6 +140,12 @@
     text-align: center;
   }
 
+  .home-infos p.home-about {
+    padding: 0 1rem;
+    font-size: 17px;
+    text-align: left;
+  }
+
   .home-content {
     display: inline;
     padding-bottom: 30px;
